--- a/src/EntityFrameworkCore.DbContextPoolMultiplexer.csproj
+++ b/src/EntityFrameworkCore.DbContextPoolMultiplexer.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.1</TargetFramework>
     <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
-    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <GeneratePackageOnBuild>false</GeneratePackageOnBuild>
     <Authors>Matt Claycomb</Authors>
     <Company />
     <Product />
@@ -13,6 +13,7 @@
     <PackageProjectUrl>https://github.com/matt-claycomb/EntityFrameworkCore.DbContextPoolMultiplexer</PackageProjectUrl>
     <RepositoryType>git</RepositoryType>
     <Nullable>annotations</Nullable>
+    <Version>1.0.0</Version>
   </PropertyGroup>
 
   <ItemGroup>
