--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,24 +1,19 @@
-name: publish to nuget
+name: "Publish to NuGet"
 on:
   push:
     branches:
-      - master # Default release branch
+      - master
 jobs:
   publish:
-    name: build, pack & publish
+    name: "Build, Pack & Publish"
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
 
-      # - name: Setup dotnet
-      #   uses: actions/setup-dotnet@v1
-      #   with:
-      #     dotnet-version: 3.1.200
-
-      # Publish
-      - name: publish on version change
+      - name: "Publish on Version Change"
         id: publish_nuget
         uses: rohith/publish-nuget@v2
         with:
-          # Filepath of the project to be packaged, relative to root of repository
+          
           PROJECT_FILE_PATH: src/EntityFrameworkCore.DbContextPoolMultiplexer.csproj
+          NUGET_KEY: ${{secrets.NUGET_API_KEY}}
